# cudad

./: .gitignore  Cargo.toml  IMPROVEMENT_PLAN.md  LICENSE  README.md
docs/dev/: backend_rewrite.MD  backend_rewrite_log.MD  decompiler_design.MD  gpt.MD  insts.MD  notice.MD
examples/: regen_goldens.rs
src/: abi.rs  ast.rs  ast_lowering.rs  ast_passes.rs  backend_names.rs  backend_pipeline.rs  canonical_ast_passes.rs  cfg.rs  cfg_analysis.rs  cfg_analysis_old.rs  dce.rs  debug_util.rs  function_analysis.rs  high_il.rs  ir.rs  ir_algebra.rs  ir_constprop.rs  ir_copyprop.rs  ir_cse.rs  ir_dce.rs  ir_old.rs  lib.rs  memory_model.rs  name_recovery.rs  op_semantics.rs  parser.rs  ptr_verification.rs  region.rs  semantic_lift.rs  semantic_propagation.rs  structurizer.rs  structurizer_gemini.rs  structurizer_old.rs  symbol_plan.rs  test.rs  type_inference.rs  typed_output.rs
src/ast_passes/: tests.rs
src/semantic_lift/: op_sig.rs  registry.rs
src/structurizer/: collapse.rs  mod.rs  tests.rs
test_cu/: if.sass  if_loop.sass  loop_constant.sass  rc4.cu  rc4.sass  sample_verify_kernel.sass  test_div.cu  test_div.sass  vector_add.cu
test_cu/corpus/: README.md  arith_kernels.cu  arith_kernels.sass  branching_kernels.cu  branching_kernels.sass  compute_kernels.cu  compute_kernels.sass  control_flow_kernels.cu  control_flow_kernels.sass  crypto_kernels.cu  crypto_kernels.sass  data_processing_kernels.cu  data_processing_kernels.sass  image_processing_kernels.cu  image_processing_kernels.sass  loop_kernels.cu  loop_kernels.sass  ml_kernels.cu  ml_kernels.sass  (+4 more)
(+48 files in other folders)
