[package]
name = "cudad"
version = "0.1.0"
edition = "2021"

[dependencies]
nom           = { version = "7", features = ["std"] }
petgraph      = "0.8.1"
lazy_static   = "1"        # only for test
regex         = "1"
clap = { version = "4", features = ["derive"] }
itertools = "0.12"
thiserror = "1"

[dev-dependencies]
pretty_assertions = "1"
